Implemented dice roll and commands "roll", "quit". Replaced deprecated Integer constructor with Integer.valueof()